package com.prmto.translator.android.core.util

object TestTags {
    const val fromDropdown = "from_dropdown"
    const val toDropdown = "to_dropdown"
    const val translateTextField = "translate_text_field"

    const val languageDropDownItem = "language_dropdown_item_"
    const val idleTranslateTextField = "idle_translate_text_field"
    const val translatedTextField = "translated_text_field"
    const val fromLanguageDisplay = "from_language_display"
    const val toLanguageDisplay = "to_language_display"
}